使用file-loader解析字体和图片

--- a/note/1.md
+++ b/note/1.md
@@ -168,3 +168,26 @@ module.exports = {
 
 ```
 loader 的调用是链式调用的，执行顺序是从右到左的，因此所有 loader 的组合调用，应该是先调用的写在最后面。
+
+### 资源解析：解析图片
+```shell
+npm install file-loader -D
+```
+```js webpack.config.js
+module.exports = {
+ // some code ...
+  module:{
+    rules:[
+      // somde code ...
+      {
+        test: /\.(png|jpg|jgeg|git)$/,
+        use: 'file-loader'
+      },
+      {
+        test: /.(woff|woff2|eot|ttf|otf)$/,
+        use: 'file-loader'
+      }
+    ]
+  },
+}
+```
