--- a/note/1.md
+++ b/note/1.md
@@ -191,3 +191,23 @@ module.exports = {
   },
 }
 ```
+#### 更好的处理资源的 url-loader
+使用 url-loader 更好的处理资源，设置较小的资源为 base64
+``` js webpack.config.js
+module.exports = {
+ // some code ...
+  module:{
+    rules:[
+      // somde code ...
+      {
+        test: /.(woff|woff2|eot|ttf|otf)$/,
+        use: [{
+          loadr:
+        }]
+      }
+    ]
+  },
+}
+```
+
+
