webpack-dev-server热更新

--- a/note/1.md
+++ b/note/1.md
@@ -210,4 +210,54 @@ module.exports = {
 }
 ```
 
+### webpack 中文件监听
+webpack 开启文件监听两种方式:
+* 启动 webpack 命令时，增加参数 --watch
+* webpack.config.js 中设置 watch:true    
+
+缺点：浏览器需要手动刷新   
+**文件监听的原理：**    
+轮询判断文件的最后编辑时间是否变化，如果某个文件发生了变化，不会立刻告诉监听者，而是先缓存起来，等 aggregateTimeout 。
+```js
+module.exports = {
+  //默认 false ，也就是不开启监听
+  watch: true,
+  watchOptions: {
+    //默认为空，不监听的文件或者文件夹，支持正则匹配
+    ignored: /node_modules/,
+    //监听到变化发生后会等300ms再去执行，默认300ms
+    aggregateTimeout: 300,
+    //判断文件是否发生变化是通过不停询问系统指定文件有没有变化实现的，默认每秒问1000次 
+    poll: 1000
+  },
+}
+```
+[更多watchOptions参数](https://webpack.docschina.org/configuration/watch/#watchoptions)   
+
+### 热更新 webpack-dev-server
+开启热更新需要 webpack-dev-server 以及配合 webpack 自带插件 HotModuleReplacementPlugin 来使用。
+```shell
+npm install webpack-dev-server -D
+```
+```js webpack.config.js
+const path = require('path')
+const webpack = require('webpack')
+module.exports = {
+  // some code ...
+  mode: 'development',
+  plugins:[
+    new webpack.HotModuleReplacementPlugin()
+  ],
+  devServer:{
+    contentBase:'./dist',
+    host:true
+  }
+}
+```
+[更多webpack-dev-server使用](https://webpack.docschina.org/configuration/dev-server/)    
+[关于HotModuleReplacementPlugin](https://webpack.docschina.org/concepts/hot-module-replacement/)
+
+
+
+
 
