--- a/note/1.md
+++ b/note/1.md
@@ -85,9 +85,9 @@ ZipWebpackPlugin          |将打包出来的资源生成一个zip包
 
 
 ### mode 概念
-mode用来指定当前的构建环境分别为: production、development、node。
+mode 用来指定当前的构建环境分别为: production、development、node。
 
-**设置mode可以使用webpack内置的函数，默认值为 production。**
+**设置 mode 可以使用webpack内置的函数，mode 默认值为 production。**
 
 **mode 的内置函数功能**
 
@@ -167,7 +167,22 @@ module.exports = {
 }
 
 ```
-loader 的调用是链式调用的，执行顺序是从右到左的，因此所有 loader 的组合调用，应该是先调用的写在最后面。
+`loader` 的调用是链式调用的，执行顺序是从右到左的，因此所有 `loader` 的组合调用，应该是先调用的写在最后面。
+
+`sass-loader` 可以通过 `Fiber` 进行一个简单的编译加速
+```js
+{
+  test: /\.(sass|scss)$/,
+  use: ['style-loader', 'css-loader', {
+    loader: 'sass-loader',
+    options: {
+      implementation: require('sass'),
+      fiber: Fiber
+    }
+  }]
+}
+```
+
 
 ### 资源解析：解析图片
 ```shell
@@ -192,7 +207,7 @@ module.exports = {
 }
 ```
 #### 更好的处理资源的 url-loader
-使用 url-loader 更好的处理资源，设置较小的资源为 base64
+使用 `url-loader` 更好的处理资源，设置较小的资源为 base64
 ``` js webpack.config.js
 module.exports = {
  // some code ...
@@ -200,10 +215,17 @@ module.exports = {
     rules:[
       // somde code ...
       {
-        test: /.(woff|woff2|eot|ttf|otf)$/,
+        test: /\.(png|jpg|jgeg|git)$/,
         use: [{
-          loadr:
+          loader: 'url-loader',
+          options: {
+            limit: 10240
+          }
         }]
+      },
+      {
+        test: /.(woff|woff2|eot|ttf|otf)$/,
+        use: 'file-loader'
       }
     ]
   },
@@ -235,7 +257,7 @@ module.exports = {
 [更多watchOptions参数](https://webpack.docschina.org/configuration/watch/#watchoptions)   
 
 ### 热更新 webpack-dev-server
-开启热更新需要 webpack-dev-server 以及配合 webpack 自带插件 HotModuleReplacementPlugin 来使用。
+开启热更新需要 `webpack-dev-server` 以及配合 `webpack` 自带插件 `HotModuleReplacementPlugin` 来使用。
 ```shell
 npm install webpack-dev-server -D
 ```
@@ -257,7 +279,83 @@ module.exports = {
 [更多webpack-dev-server使用](https://webpack.docschina.org/configuration/dev-server/)    
 [关于HotModuleReplacementPlugin](https://webpack.docschina.org/concepts/hot-module-replacement/)
 
+### 热更新 webpack-dev-middleware
+通过 `webpack-dev-middleware` 配合 使用 `webpack-hot-middleware` 来实现热更新，可定制定性更高。
+```js webpack.config.js
+const htmlWebpackPlugin = require('html-webpack-plugin')
+const webpack = require('webpack')
+const path = require('path')
 
+module.exports={
+  entry:['./src/index.js'],
+  output: {
+    filename: '[name].bundle.js',
+    path: path.resolve(__dirname, 'dist'),
+    publicPath: '/'
+  },
+  mode:'development',
+  module:{
+    rules:[
+      {
+        test:/\.js$/,
+        use:'babel-loader'
+      },
+      {
+        test:/\.(scss|css)$/,
+        use:[
+          'style-loader',
+          'css-loader',
+          'sass-loader'
+        ]
+      }
+    ]
+  },
+  plugins:[
+    new htmlWebpackPlugin({
+      title:'webpack-dev-middleware',
+      template:'./index.html'
+    }),
+    new webpack.HotModuleReplacementPlugin()
+  ]
+}
+```
+
+```js server.js
+const express = require('express');
+const webpack = require('webpack');
+const webpackDevMiddleware = require('webpack-dev-middleware');
+const webpackHotMiddleware = require('webpack-hot-middleware');
+const app = express();
+const config = require('./webpack.config.js');
+config.entry = ['webpack-hot-middleware/client'].concat(config.entry);
+const compiler = webpack(config);
+const devMiddleware = webpackDevMiddleware(compiler, {
+  publicPath: config.output.publicPath,
+  hot: true,
+  noInfo: true,
+  stats: {
+    colors: true
+  }
+});
+
+app.use(devMiddleware);
+app.use(webpackHotMiddleware(compiler));
+// 将文件 serve 到 port 3000。
+app.listen(3000, function () {
+  console.log('Example app listening on port 3000!\n');
+});
+```
+[更加详细的配置](https://github.com/webpack-contrib/webpack-hot-middleware)     
+[一篇关于热更新含金量较高的文章](https://www.cnblogs.com/wonyun/p/7077296.html)
+此方法可能存在热更新状态管理时，状态管理中数据丢失情况，因此可以通过下面方式进行处理:
+```js
+if(module.hot){
+  module.hot.accept('../reducers/index.js', ()=>{
+    const nextReducer = require('../reducers/index.js');
+    store.replaceReducer(nextReducer || nextReducer.default);
+  })
+}
+```
 
 
 
