--- a/note/1.md
+++ b/note/1.md
@@ -357,5 +357,65 @@ if(module.hot){
 }
 ```
 
+**热更新原理**     
+![](./热更新原理.png)
+
+
+
+### 文件指纹
+如何生成： 
+* Hash: 和整个项目的构建相关，只要项目文件有修改，整个项目构建的 hash 值都会更改
+* Chunkhash: 和 webpack 打包的 chunk 有关，不同额 entry 会生成不同的 chunkhash 值
+* Contenthash: 根据文件内容来定义 hash，文件内容不变，则 contenthash 不变
+
+
+#### js 文件指纹设置
+设置 `output` 的 `filename` 为  `Chunkhash`。 chunk 文件不变， js 的连接就不变
+```js
+output: {
+  path: path.join(__dirname, 'dist'),
+  filename: '[name][chunkhash:8].js'
+},
+```
+#### ccs 的文件指纹
+如果 css 同样使用 `chunkhash` 的话会出现，js 改变了 css 没有改变，但是最终的文件连接改变，破坏缓存。因此 css 应该使用 `MiniCssExtractPlugin` 配合 `contenthash` 来进行设置。
+```js webpack.config.js
+plugins: [
+  new MiniCssExtractPlugin({
+    filename: `[name][contenthash:8].css `
+  })
+],
+```
+同时 `MiniCssExtractPlugin` 和 `style-loader` 的功能是冲突，因此一般开发环境使用 `style-loader`。在生产环境使用 `MiniCssExtractPlugin.loader`。
+
+
+#### 图片的文件指纹
+直接使用 hash
+```js
+rules:[
+  {
+    test: /\.(png|jpg|jgeg|git)$/,
+    use: [{
+      loader: 'url-loader',
+      options: {
+        limit: 10240,
+        name:'img/[name][hash:8].[ext]'
+      }
+    }]
+  }
+]
+```
+
+占位符名称            | 含义
+--------------------|------------------------------
+[ext]               |资源后缀名
+[name]              | 文件名称
+[path]              | 文件坐在相对路径
+[folder]            | 文件所在文件夹
+[contenthasg]       | 文件内容 hash，默认是 md5 生成
+[hash]              | 文件内容 hash，默认是 md5 生成
+[emoji]             | 一个随机的指代文件内容的 emoji
+
+
 
 
