--- a/note/1.md
+++ b/note/1.md
@@ -416,6 +416,53 @@ rules:[
 [hash]              | 文件内容 hash，默认是 md5 生成
 [emoji]             | 一个随机的指代文件内容的 emoji
 
+### 文件压缩
+#### js 文件压缩
+
+webpack4 中内置了 `uglifyjs-webpack-plugin` 的插件。所以默认打包出来的 js 已经是压缩了之后的代码。
+淡当然也可以直接进行一个自定义的设置(如并行压缩)
+
+[更多关于UglifyjsWebpackPlugin使用](https://webpack.docschina.org/plugins/uglifyjs-webpack-plugin/)
+
+#### css 文件压缩
+使用 `optimize-css-assets-webpack-plugin` 同时使用 `cssnano`
+```js
+plugins:[
+  new OptimizeCssAssetsWebpackPlugin({
+    assetNameRegExp:/\.css$/,
+    cssProcessor:require('cssnano')
+  })
+]
+```
+[更多关于optimize-css-assets-webpack-plugin使用](https://www.npmjs.com/package/optimize-css-assets-webpack-plugin)   
+[cssnano](https://cssnano.co/)
+
+
+
+#### html 文件压缩
+使用 `html-webpack-plugin` 设置压缩参数
+```js webpack.config.js
+plugins:[
+  new HtmlWebpackPlugin({ 
+    template:path.join(__dirname,'./search.html'),//模版中可以使用ejs语法
+    filename:'search.html',
+    chunks:['search'], // 指定html使用那些chunk
+    inject:true,//自动将使用的chunk注入模版
+    minify:{
+      html5:true,
+      collapseWhitespace:true,
+      preserveLineBreaks:false,
+      minifyCSS:true,
+      minifyJS:true,
+      removeComments:false
+    }
+  }),
+]
+```
+[更多关于html-webpack-plugin使用](https://www.npmjs.com/package/html-webpack-plugin)
+
+
+
 
 
 
