--- a/note/1.md
+++ b/note/1.md
@@ -463,6 +463,12 @@ plugins:[
 
 
 
+### 踩坑
+
+```js
+Cannot use [chunkhash] or [contenthash] for chunk in '[name]_[chunkhash:8].js'
+```
+* 如果 build 的时候，如果使用了 `chunkhash` 的 `plugins` 上不能有 `new webpack.HotModuleReplacementPlugin()`
 
 
 
