--- a/note/2.md
+++ b/note/2.md
@@ -51,7 +51,28 @@ last 2 versions
 ### css 增强（通过 webpack 转换rem 适配）
 
 ```js
-npm install px2rem-loader -D
+npm install px2rem-loader lib-flexible -D
+```
+```js webpack.config.js
+module:{
+  rules:[
+    {
+      test:/\.(scss|css)$/,
+      use:[
+        'style-loader',
+        'css-loader',
+        'sass-loader',
+        {
+          loader:'px2rem-loader',
+          options:{
+            remUnit:75, // 750设计稿
+            remPrecesion:8 // 精确度
+          }
+        }
+      ]
+    },
+  ]
+}
 ```
 
 
