--- a/note/2.md
+++ b/note/2.md
@@ -75,5 +75,31 @@ module:{
 }
 ```
 
+### 资源内联
+代码层面意义：
+* 页面框架的初始化脚本（如引入`lib-flexible`）
+* 上报相关打点
+* css 内联避免页面闪动  
+
+请求层面意义:
+* 减少 HTTP 网络请求数量 (小的图片或者字体内联`url-loader `)
+
+#### HTML 和 JS 内联
+使用 `raw-loader` 做资源的内联是不能使用过高版本。
+```shell
+npm i raw-loader@0.5 -D
+```
+```js
+${ require('raw-loader!./meta.html')}
+<script>
+ ${ require('raw-loader!babel-loader!./node_modules/lib-flexible/flexible.js')}
+</script>
+```
+#### css 的内联
+方案一：借助`style-loader`来完成
+[具体查看style-loader配置项](https://www.npmjs.com/package/style-loader)
+
+方案二：借助 `html-inline-css-webpack-plugin`
+[具体查看html-inline-css-webpack-plugin](https://www.npmjs.com/package/html-inline-css-webpack-plugin)
 
 
