--- a/note/2.md
+++ b/note/2.md
@@ -103,3 +103,76 @@ ${ require('raw-loader!./meta.html')}
 [具体查看html-inline-css-webpack-plugin](https://www.npmjs.com/package/html-inline-css-webpack-plugin)
 
 
+### 多页面的打包 MPA
+多页面打包基本思路:      
+每个页面对应一个`entry`，一个`html-webpack-plugin`    
+缺点： 每次新增或者删除页面需要修改 `webpack`配置     
+**多页面打包通用方案：**     
+动态获取`entry`和设置`html-webpacl-plugin`数量。
+利用`glob.sync`
+```js
+enrty:glob.sync(path.join(__dirname,'./src/*/index.js'))
+```
+```shell
+npm install glob -D
+```
+相当于市使用了一个约定俗成的，每一个页面的入口都建`index`。同时`src`下面的没一个文件名为多页面中每个页面的名称.
+```js 
+const setMPA = () => {
+  const entry = {}
+  const htmlWebpackPlugins = []
+  const entryFiles = glob.sync(path.join(__dirname, './src/*/index.js'))
+  Object.keys(entryFiles).map(index => {
+    console.log()
+    const entryFile = entryFiles[index]
+    const match = entryFile.match(/src\/(.*)\/index.js/)
+    const pageName = match && match[1]
+    entry[pageName] = entryFile
+
+    htmlWebpackPlugins.push(new htmlWebpackPlugin({
+      template: path.join(__dirname, `./src/${pageName}/index.html`),
+      filename: `${pageName}.html`,
+      chunks: [`${pageName}`],
+      inject: true,
+      minify: {
+        html5: true,
+        collapseWhitespace: true,
+        preserveLineBreaks: false,
+        minifyCSS: true,
+        minifyJS: true,
+        removeComments: false
+      }
+    }))
+  })
+
+  return {
+    entry,
+    htmlWebpackPlugins
+  }
+}
+
+const { entry, htmlWebpackPlugins } = setMPA();
+```
+
+[多页面demo(此时只对prod进行了处理)](https://github.com/xiaopingbuxiao/webpack/tree/master/MPA)
+
+
+### webpack 中开启 source map
+
+`source map`关键字:    
+* eval：使用 eval 包裹模块代码
+* source map：产生 .map 文件
+* cheap：不包含列信息
+* inline：将 .map 作为 DataURL 嵌入，不单独生成 .map 文件
+* module：包含 loader 的 sourcemap
+
+[更多sourceMap类型](https://webpack.docschina.org/configuration/devtool/)
+
+对于 `js` 的 `sourceMap` 只需要设置:
+```js 
+module.exports={
+  devtool:'source-map'
+}
+```
+对于 `css` 的 `source-map` 根据 [css-loader](https://www.npmjs.com/package/css-loader) 来设置。
+ 
