html-webpack-externals-plugin分离起初包

--- a/note/2.md
+++ b/note/2.md
@@ -176,3 +176,56 @@ module.exports={
 ```
 对于 `css` 的 `source-map` 根据 [css-loader](https://www.npmjs.com/package/css-loader) 来设置。
  
+
+ ### 基础库的分离
+
+思路：将 `react`、`react-dom` 等基础包通过`cdn`引入，不打入`bundle`中      
+方法：使用`html-webpack-externals-plugin`
+```shell
+npm install --save-dev html-webpack-externals-plugin
+```
+增加配置如下:
+```js
+plugins;[
+  new HtmlWebpackExternalsPlugin({
+    externals: [
+      {
+        module: 'react',
+        entry: '//unpkg.com/react@16/umd/react.development.js',
+        global: 'React',
+      },
+      {
+        module: 'react-dom',
+        entry: '//unpkg.com/react-dom@16/umd/react-dom.development.js',
+        global: 'ReactDOM',
+      },
+    ],
+  })
+]
+```
+
+
+
+
+
+也可以使用`SplitChunksPlugin`来进行基础包的分离。
+
+```js
+
+```
+
+
+
+
+
+### 利用 SplitChunksPlugin 进行公共脚本的分离
+
+`webpack4` 内置了此插件。      
+`chunks` 参数说明:
+* async 一步引入的库进行分离(默认)
+* initial 同步引入的库进行分离
+* all 所有引入的库进行分离(默认)
+
+
+
+[SplitChunksPlugin更详细的文档](https://webpack.docschina.org/plugins/split-chunks-plugin/)
