--- a/note/2.md
+++ b/note/2.md
@@ -203,15 +203,61 @@ plugins;[
   })
 ]
 ```
+**此处需要注意的是`html`的模版中需要手动引入 cdn 资源**
 
 
-
-
-
-也可以使用`SplitChunksPlugin`来进行基础包的分离。
+也可以使用`SplitChunksPlugin`来进行基础包的分离。将`React`和`ReactDOm`优化为一个公共包:
 
 ```js
+optimization: {
+  splitChunks: {
+    cacheGroups: {
+      commons: {
+        test: /(react|react-dom)/,
+        name: 'React_ReactDOM',
+        chunks: 'all'
+      }
+    }
+  }
+},
+```
+同时增加`html-webpack-plugin`中的`chunks`：
+```js
+const setMPA = () => {
+  const entry = {}
+  const htmlWebpackPlugins = []
+  const entryFiles = glob.sync(path.join(__dirname, './src/*/index.js'))
+  console.log(entryFiles)
 
+  Object.keys(entryFiles).map(index => {
+    console.log()
+    const entryFile = entryFiles[index]
+    const match = entryFile.match(/src\/(.*)\/index.js/)
+    const pageName = match && match[1]
+    entry[pageName] = entryFile
+
+    htmlWebpackPlugins.push(new htmlWebpackPlugin({
+      template: path.join(__dirname, `./src/${pageName}/index.html`),
+      filename: `${pageName}.html`,
+      /* 新增 React_ReactDOM 的公共包 */
+      chunks: ['React_ReactDOM',`${pageName}`],
+      inject: true,
+      minify: {
+        html5: true,
+        collapseWhitespace: true,
+        preserveLineBreaks: false,
+        minifyCSS: true,
+        minifyJS: true,
+        removeComments: false
+      }
+    }))
+  })
+
+  return {
+    entry,
+    htmlWebpackPlugins
+  }
+}
 ```
 
 
@@ -226,6 +272,27 @@ plugins;[
 * initial 同步引入的库进行分离
 * all 所有引入的库进行分离(默认)
 
+```js
+optimization: {
+  splitChunks: {
+    minSize: 0,
+    cacheGroups: {
+      React_ReactDOM: {
+        test: /(react|react-dom)/,
+        name: 'React_ReactDOM',
+        chunks: 'all'
+      },
+      commons: {
+        name: 'commons',
+        chunks: 'all',
+        minChunks: 2
+      }
+    }
+  }
+},
+```
+**此时有一个坑，一定注意优化优化后的文件名需要添加到 `html-webpack-plugin` 插件的`chunks`中，如果忘记添加，容易出现，本地开发时正常，打出的包中因为少引入了资源而引起报错**
 
+[demo地址](https://github.com/xiaopingbuxiao/webpack/tree/master/splitChunks)
 
 [SplitChunksPlugin更详细的文档](https://webpack.docschina.org/plugins/split-chunks-plugin/)
