--- a/note/2.md
+++ b/note/2.md
@@ -319,3 +319,27 @@ DCE (Dead code elimination) 的代码不会被打包：
 **此处只是一个最简单的使用，事实上`tree-shaking` 的使用中存在很多的坑，用到时更多的处理**
 
 #### Scope Hoisting
+
+默认情况下 `webpack` 的打包，会将引用的各个模块打包进一个匿名函数中，这会生成很多无用的代码，同时大量闭包的引用会造成资源的浪费。
+默认情况下 `webpack` 在生产环境会自动开启。手动设置`mode:'none'`。打包结果如下：
+```js
+import { hello } from './hello'
+import { world } from './world'
+console.log(hello() + ' ' + world())
+```
+打包后如图:   
+![scope-hoisting](./scope-hoisting.png)
+
+手动开启`scope-hoisting`(`mode`还是设置为'none'):
+```js
+plugins:[
+  new webpack.optimize.ModuleConcatenationPlugin(),
+]
+```
+打包后如图:   
+
+![scope-hoisting](./scope-hoisting2.png)
+[更多scope-hoisting内容](https://www.webpackjs.com/plugins/module-concatenation-plugin/)
+
+
+
