懒加载js优化首屏 动态import

--- a/note/2.md
+++ b/note/2.md
@@ -343,3 +343,79 @@ plugins:[
 
 
 
+### 代码分割
+意义：对于大的 Web 应用来讲，将所有的代码都放在一个文件中会使得首屏加载过慢。webpack 有一个功能就是将代码库分割成 chunks(语块)。当代码运行到需要他们的时候在进行加载。
+
+适用场景:
+* 抽离相同的代码到一个共享块
+* 脚本懒加载，使得初始下载的代码更小
+
+#### 懒加载 js 脚本方式
+* CommonJS: require.ensure
+* ES6: 动态 import (目前还没有原生支持，需要 babel 转换)
+
+动态 import 使用 ：      
+1. 安装 babel 插件
+```shell
+npm install --save-dev @babel/plugin-syntax-dynamic-import
+```
+2. 
+```js  .babelrc
+{
+  "plugins": ["@babel/plugin-syntax-dynamic-import"]
+}
+```
+
+```js search.js
+import React from 'react'
+import ReactDOM from 'react-dom'
+import { common } from '../../common'
+import './search.scss'
+import logo from './img/react-logo.png'
+import { a } from './tree-shaking'
+
+var str = a()
+console.log(common())
+class Search extends React.Component {
+  constructor() {
+    super()
+    this.state = {
+      Text: null
+    }
+  }
+  loadComponent() {
+    import('./Text.jsx').then((Text) => {
+      console.log(Text.default)
+      this.setState({
+        Text: Text.default
+      })
+    })
+  }
+  render() {
+    const { Text } = this.state
+    return (
+      <div className='search-Text'>
+        {
+          Text ? <Text></Text> : null
+        }
+        <img src={logo} onClick={this.loadComponent.bind(this)} />
+        <span>搜索页面的html{str}</span>
+      </div>
+    )
+  }
+}
+ReactDOM.render(
+  <Search />,
+  document.querySelector('#app')
+)
+```
+```js text.js
+import React from 'react'
+export default() => <div>动态import组件text</div>
+```
+此时打包之后已经可以看到。点击图片是会进行一个动态的加载 js 的请求。以此来达到分包优化的效果。
+[具体demo地址](https://github.com/xiaopingbuxiao/webpack/tree/master/splitChunks)
+
+
+
+
