--- a/note/2.md
+++ b/note/2.md
@@ -419,3 +419,32 @@ export default() => <div>动态import组件text</div>
 
 
 
+
+### 打包一个库
+```js
+const terserWebpackPlugin = require('terser-webpack-plugin')
+
+module.exports = {
+  entry: {
+    "large-number": './src/index.js',
+    "large-number.min": './src/index.js'
+  },
+  main:'index.js',
+  mode: 'none',
+  output: {
+    filename: '[name].js',  // 文件名称
+    library: 'largeNumber', // 打包之后的库名
+    libraryTarget: 'umd',   // 支持的引入方式
+    libraryExport: 'default' 
+  },
+  optimization: {
+    minimize: true,
+    minimizer: [
+      new terserWebpackPlugin({
+        include: /\.min\.js$/
+      })
+    ]
+  }
+}
+```
+
