--- a/note/1.md
+++ b/note/1.md
@@ -415,7 +415,7 @@ rules:[
 #### js 文件压缩
 
 webpack4 中内置了 `uglifyjs-webpack-plugin` 的插件。所以默认打包出来的 js 已经是压缩了之后的代码。
-淡当然也可以直接进行一个自定义的设置(如并行压缩)
+当然也可以直接进行一个自定义的设置(如并行压缩)
 
 [更多关于UglifyjsWebpackPlugin使用](https://webpack.docschina.org/plugins/uglifyjs-webpack-plugin/)
 
