--- a/note/1.md
+++ b/note/1.md
@@ -164,7 +164,7 @@ module.exports = {
 ```
 `loader` 的调用是链式调用的，执行顺序是从右到左的，因此所有 `loader` 的组合调用，应该是先调用的写在最后面。
 
-`sass-loader` 可以通过 `Fiber` 进行一个简单的编译加速
+`sass-loader` 可以通过 `fibers` 进行一个简单的编译加速
 ```js
 {
   test: /\.(sass|scss)$/,
@@ -172,7 +172,9 @@ module.exports = {
     loader: 'sass-loader',
     options: {
       implementation: require('sass'),
-      fiber: Fiber
+      sassOptions: {
+        fiber: require('fibers'),
+      },
     }
   }]
 }
