--- a/note/2.md
+++ b/note/2.md
@@ -265,7 +265,7 @@ const setMPA = () => {
 
 `webpack4` 内置了此插件。      
 `chunks` 参数说明:
-* async 一步引入的库进行分离(默认)
+* async 异步引入的库进行分离(默认)
 * initial 同步引入的库进行分离
 * all 所有引入的库进行分离(默认)
 
@@ -447,4 +447,44 @@ module.exports = {
   }
 }
 ```
+
+### 接入 eslint
+`vue` 项目
+```
+npm install eslint eslint-loader eslint-plugin-vue @ued2345/eslint-config babel-eslint --save-dev
+```
+```js webpack.config.js
+module.exports = {
+	entry: entry,
+	module: {
+		rules: [
+			{
+				test: /\.vue$/,
+				use: ['vue-loader', 'eslint-loader'],
+			},
+			{
+				test: /\.js$/,
+				use: ['babel-loader', 'eslint-loader'],
+			},
+	},
+}
+```
+```js  .eslintrc.js 
+module.exports = {
+	'root': true,
+	'env': {
+		node: true,
+	},
+	'extends': [
+		'@ued2345/eslint-config/preset/essential',
+		'@ued2345/eslint-config/preset/recommended',
+		'@ued2345/eslint-config/preset/stylistic',
+		'@ued2345/eslint-config/preset/vue/essential',
+		'@ued2345/eslint-config/preset/vue/recommended',
+		'@ued2345/eslint-config/preset/vue/stylistic',
+		// '@ued2345', // 以上是细分 此处为不细分
+	],
+}
+```
+
 
