添加测试文件

--- a/note/2.md
+++ b/note/2.md
@@ -487,4 +487,22 @@ module.exports = {
 }
 ```
 
+### 异常退出
+```js
+const prodConfig = {
+  // ... some code
+	plugins: [
+		function () { // 异常的退出  默认是异常输出是1
+			this.hooks.done.tap('done', function (stats) {
+				if (stats.compilation.errors && stats.compilation.errors.length && process.argv.indexOf('--watch') === -1) {
+					console.log('build error')
+					process.exit(111)
+				}
+			})
+		},
+}
 
+
+module.exports = webpackMerge(baseConfig, prodConfig)
+
+```
