--- a/note/3.md
+++ b/note/3.md
@@ -6,5 +6,11 @@
 * 将所有的配置放在一个文件，通过`--env`参数来控制分支选择
 
 ![功能模块设计](./功能模块设计.png)
+[涵盖基本功能的demo](https://github.com/xiaopingbuxiao/webpack/tree/master/my-project)
+
+
+### 添加测试文件
+
+[demo](https://github.com/xiaopingbuxiao/webpack/tree/master/my-project02)
 
 
