feat:如何配置commit规范

--- a/note/3.md
+++ b/note/3.md
@@ -19,4 +19,52 @@
 **接入 `Travis CI`**
 
 
+### git 规范和 changelog 生成
+
+[Commit message 和 Change log 编写指南](https://www.ruanyifeng.com/blog/2016/01/commit_message_change_log.html)
+
+```shell
+npm install husky @commitlint/config-conventional @commitlint/cli -save-dev
+```
+```json package.json
+{
+  // ....
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
+}
+```
+
+增加 `commitlint.config.js` 
+```js
+module.exports = {
+  extends: ['@commitlint/config-conventional'],
+};
+```
+之后所有 `commit` 的信息都会被校验，不符合格式的 `commit` 会被阻止。
+**第二种方式**
+同时可以使用 `commitizen` 来生成来选择指定的`commit`格式。
+```shell
+npm install commitizen -save-dev
+```
+或者 
+```
+npm install commitizen cz-conventional-changelog -g
+```
+增加`.czrc`文件
+```
+{ "path": "cz-conventional-changelog" }
+```
+全局和本地依赖的使用不同。全局`git cz`。本地`npx git-cz`。如图
+![](./git.png)
+同时`package.json`增加脚本
+```json package.json
+"scripts": {
+  "generate:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+},
+```
+可以自动生成`CHANGELOG.md`。
+
 
