--- a/note/3.md
+++ b/note/3.md
@@ -68,3 +68,18 @@ npm install commitizen cz-conventional-changelog -g
 可以自动生成`CHANGELOG.md`。
 
 
+### 速度分析插件
+[speed-measure-webpack-plugin](https://www.npmjs.com/package/speed-measure-webpack-plugin)
+查看`loader、plugin`的耗时时间，针对性的就行一些优化
+
+
+### webpack 体积分析
+[webpack-bundle-analyzer](https://www.npmjs.com/package/webpack-bundle-analyzer)
+
+
+### 编译速度优化
+[如何提高webpack的编译速度](https://github.com/ly2011/blog/issues/44)
+
+**重要：开发编译速度提升很明显**
+
+[demo地址](https://github.com/xiaopingbuxiao/webpack/tree/master/my-project02)
