--- a/note/3.md
+++ b/note/3.md
@@ -80,6 +80,22 @@ npm install commitizen cz-conventional-changelog -g
 ### 编译速度优化
 [如何提高webpack的编译速度](https://github.com/ly2011/blog/issues/44)
 
-**重要：开发编译速度提升很明显**
+#### 多进程/多实例构建：资源并行解析可选方案
+* thread-loader 官方推荐
+* parallel-webpack 使用
+* happypack 使用
 
+#### 多进程/多实例：并行压缩
+* webpack-parallel-uglify-plugin 
+* uglifyjs-webpack-plugin
+* terser-webpack-plugin (推荐使用)
+
+`terser-webpack-plugin` webpack4 中使用，并且 `terser-webpack-plugin` 相对于前两者支持压缩`es6`
+
+
+
+**重要：开发编译速度提升很明显**
 [demo地址](https://github.com/xiaopingbuxiao/webpack/tree/master/my-project02)
+
+
+
