--- a/note/3.md
+++ b/note/3.md
@@ -98,4 +98,78 @@ npm install commitizen cz-conventional-changelog -g
 [demo地址](https://github.com/xiaopingbuxiao/webpack/tree/master/my-project02)
 
 
+### 构建速度的优化 分包优化 
 
+####  设置 `Externals` 
+使用 [html-webpack-externals-plugin](https://www.npmjs.com/package/html-webpack-externals-plugin)
+
+#### 使用 DLLPlugin 进行分包
+思路： 将 `vue`,`vue-router`,`vuex`等基础包和业务基础包打包成一个文件 
+方法： 使用 `DLLPlugin` 进行分包，`DllReferencePlugin`
+
+[使用方式](https://webpack.docschina.org/plugins/dll-plugin/)
+
+方法内置的插件。 
+
+
+### 提升构建速度 增加缓存
+缓存思路：
+* `babel-loader` 开启缓存
+* `terser-webpack-plugin` 开启缓存
+* 使用`cache-loader` 或者`hard-source-webpack-plugin`
+
+所有的使用配置都可以在 npm 上找到。
+他们在第一次构建之后会在`node_modules`下生成一个`.cache`文件夹为缓存文件。下次构建提供加速
+
+
+### 缩小构建目标 （**非常重要**）
+
+比如使用 `babel-loader`不解析`node_modules`。
+```js
+module.exports = {
+  module:{
+    rules:{
+      test:/\.js$/,
+      loader:'babel-loader',
+      exclude:'node_modules'
+    }
+  }
+}
+```
+#### 减少文件搜索范围
+* 优化 `reslove.modules`配置，减少模块搜索层级
+* 优化`reslove.mainFields`配置
+* 优化`reslove.extensions`配置
+* 合理使用`alias`
+如下：
+```js
+module.exports = {
+  reslove:{
+    alias:{
+      react:path.reslove(__dirname,'./node_modules/react/dist/vue.min.js')
+    },
+    modules:[path.reslove(__dirname,'node-modules')],
+    extensions:['.js'],
+    mainFields:['main']
+  }
+}
+```
+
+
+### 无用的 css 删除
+
+#### tree shaking 复习
+概念:     
+1 个模块可能有多个方法，只要其中的某个方法使用到了，则整个文件都会被打到 bundle 里面去，tree shaking 就是只把用到的方法打入 bundle ，没用到的方法会在 uglify 阶段被擦除掉。
+
+使用:`webpack` 默认支持，在` .babelrc `里设置 `modules: false `即可  `production mode`的情况下默认开启
+要求:必须是 ES6 的语法，CJS 的方式不支持
+
+
+#### css 的处理
+
+* `PurifyCSS`: 遍历代码，识别已经用到的`CSS class` 不再维护了，因此使用`purgecss-webpack-plugin`和`mini-css-extract-plugin`配合使用
+* `uncss`: HTML 需要通过`jsdom`加载，所有的样式通过`PostCSS`解析，通过`document.querySelector`来识别在`html`文件里面不存在选择器
+
+
+[purgecss-webpack-plugin](https://www.npmjs.com/package/purgecss-webpack-plugin) 配合`vue`使用时有问题。
