--- a/note/3.md
+++ b/note/3.md
@@ -173,3 +173,27 @@ module.exports = {
 
 
 [purgecss-webpack-plugin](https://www.npmjs.com/package/purgecss-webpack-plugin) 配合`vue`使用时有问题。
+
+
+
+### 图片压缩
+要求：基于 `Node` 库 的 `imagemin` 或者 `tinypng API`      
+使用：配置`image-webpack-loader`   
+
+`imagemin` 的优点分析:
+* 有很多定制选项
+* 可以引入很多第三方优化插件,例如 `pngquart`
+* 可以处理多种图片格式
+
+
+### 动态 polyfill
+
+![](./动态polyfill.png)
+
+`polyfill` 会识别`User Agent`，下发不同的`polyfill`
+
+`polyfill.io` 官方提供的服务:
+```js
+ <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+```
+基于官方自建`polyfill`服务
