--- a/note/3.md
+++ b/note/3.md
@@ -197,3 +197,66 @@ module.exports = {
  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 ```
 基于官方自建`polyfill`服务
+
+
+### loader-runner 的使用（loader的调试）
+
+[loader-runner使用](https://www.npmjs.com/package/loader-runner)
+
+### loader 的参数获取
+通过`loader-utils`的`getOptions`方法获取
+```js
+const loaderUtils = require("loader-utils");
+module.exports = function(content) {
+  const { name } = loaderUtils.getOptions(this);
+};
+```
+### loader 的异常处理
+* `loader`内直接通过`throw`抛出
+* 通过`this.callback`抛出
+```js
+this.callback(
+  err:Error|null,
+  context:string|Buffer,
+  sourceMap?:SourceMap,
+  meta?:any
+)
+```
+### loader 的异步处理
+通过 `this.async` 来返回一个异步函数
+* 第一个参数是`Error`，第二个参数是处理结果
+```js
+module.exports = function(input) { 
+  const callback = this.async();
+// No callback -> return synchronous results // if (callback) { ... }
+  callback(null, input + input); 
+};
+```
+### loader 中使用缓存
+`webpack` 中默认开启`loader`缓存    
+* 可以使用`this.cacheable(false)`关闭缓存
+
+缓存条件:`loader`的解惑在相同的输入下有确定的输出
+* 有依赖的`loader`无法使用缓存
+
+### loader 进行文件输出
+通过`this.emitFile`进行文件写入 
+```js
+const loaderUtils = require("loader-utils");
+module.exports = function (content) {
+  const url = loaderUtils.interpolateName(this, "[hash].[ext]", {
+    content,
+  });
+  this.emitFile(url, content);
+  const path = `__webpack_public_path__ + ${JSON.stringify(url)};`;
+  return `export default ${path}`;
+};
+```
+以上关于`loader`的处理[demo]('https://github.com/xiaopingbuxiao/webpack/blob/master/raw-loader/package.json')
+
+
+
+### 开发一个合并雪碧图的 loader
+
+
+
