--- a/note/3.md
+++ b/note/3.md
@@ -258,5 +258,65 @@ module.exports = function (content) {
 
 ### 开发一个合并雪碧图的 loader
 
+[demo地址](https://github.com/xiaopingbuxiao/webpack/blob/master/sprite-loader/run-loader.js)
+
+
+### 插件的开发
+
+#### 插件的基本结构
+
+```js
+class MyPlugin { // 插件名称
+  apply(compiler) {   // 插件的apply方法
+    compiler.hooks.done.tap('My Plugin', ( //插件的hooks
+      stats/*statsispassedasargumen··twhendonehookistapped. */ //
+    ) => {
+      console.log('hello world') // 插件的处理逻辑
+    })
+  }
+}
+module.exports = MyPlugin
+```
+插件的调试没有`loader`方便，只能在`webpack`中使用调试
+
+#### 插件的错误处理
+参数校验阶段可以直接`throw`的方式抛出,
+```js
+throw new Error('')
+```
+如果是已经执行到了`plugin`中，则可以通过`compilation`对象上的`warnings`和`errors`接收
+```js
+compilation.warnings.push('warning')
+compilation.errors.push('error')
+```
+#### 通过`Compilation`进行文件的写入
+`Compilation`上的`assets`可以用于文件的写入      
+* 可以将`zip`资源包设置到`compilation.assets`对象上   
+
+文件的写入需要使用`[webpack-source](https://www.npmjs.com/package/webpack-sources)`
+
+```js
+const { RawSource } = require('webpack-sources')
+module.exports = class MyPlugin {
+  constructor(options) {
+    this.options = options
+  }
+  apply(compiler) {
+    console.log('MyPlugin is executed!')
+    console.log('MyPlugin options', this.options)
+
+    const { name } = this.options
+    compiler.plugin('emit', (compilation, cb) => {
+      compilation.assets[name] = new RawSource('demo')
+    })
+  }
+}
+
+```
+
+### zip-plugin 插件书写
+
+
+
 
 
